# substrate-auxpow-template

./: .gitmodules  Cargo.toml  LICENSE  README.md
auxpow/: Cargo.toml
auxpow/btc/: Cargo.toml
auxpow/btc/src/: hash.rs  header.rs  lib.rs  transaction.rs
auxpow/src/: auxpow.rs  btc_hash.rs  btc_header.rs  btc_tx.rs  lib.rs
auxpow/srml/: Cargo.toml
auxpow/srml/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  merged_mining.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: service.rs
srml-auxpow/: Cargo.toml
srml-auxpow/src/: auxpow.rs  lib.rs
srml-auxpow/src/algos/: auxpow.rs  blake2_256.rs  mod.rs
srml-auxpow/src/btc/: faker.rs  hash.rs  header.rs  mod.rs  transaction.rs
