[package]
name = "srml-auxpow"
version = "0.1.0"
authors = ["Andrew yz <deedecho@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
srml-support = { path = "../substrate/srml/support", default-features = false }
timestamp = { package = "srml-timestamp", path = "../substrate/srml/timestamp", default-features = false }
pow-primitives = { package = "substrate-consensus-pow-primitives", path = "../substrate/core/consensus/pow/primitives", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../substrate/core/sr-std", default-features = false }
sr-primitives = { path = "../substrate/core/sr-primitives", default-features = false }
runtime-io = { package = "sr-io", path = "../substrate/core/sr-io", default-features = false }
primitives = { package = "substrate-primitives", path = "../substrate/core/primitives", default-features = false }
hmac-sha256 = "0.1.1"

[dev-dependencies]
rustc-hex = "2"

[features]
default = ["std"]
std = [
	"srml-support/std",
	"timestamp/std",
	"pow-primitives/std",
	"codec/std",
	"rstd/std",
	"sr-primitives/std",
	"runtime-io/std",
	"serde",
	"primitives/std",
]
